Fix Swiper Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ body {
   border-radius: 20px;
   background-color: rgb(255, 255, 255);
   border: 1px solid rgba(0, 0, 0, .125);
+  overflow: hidden;
 }
 
 .swiper-slide {
@@ -125,6 +126,11 @@ body {
     border-radius: 10px;
     font-size: .85rem;
     padding: 5px;
+    margin: 5px;
+}
+
+.caption:visited {
+    color: white;
 }
 
 #contact-card {
